--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
 </head>
 
-<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Film Explorer' , 'Movie Trend' -->
+<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Film Explorer' , 'Film Trend' -->
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
@@ -93,7 +93,7 @@
                     <thead class="thead-light">
                     <tr>
                         <th>Year &nbsp; <i class="fa fa-sort"></i></th>
-                        <th>Movie &nbsp; <i class="fa fa-sort"></i></th>
+                        <th>Film &nbsp; <i class="fa fa-sort"></i></th>
                         <th>Director &nbsp; <i class="fa fa-sort"></i></th>
                         <th>IMDB Rating &nbsp; <i class="fa fa-sort"></i></th>
                         <th>Budget (USD) &nbsp; <i class="fa fa-sort"></i></th>
