--- a/trend.html
+++ b/trend.html
@@ -18,7 +18,7 @@
     <script src="bower_components/d3v3.js"></script>
 </head>
 
-<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Movie Explorer' , 'Movie Trend' -->
+<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Film Explorer' , 'Film Trend' -->
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
