plottingScatter name change

--- a/trend.html
+++ b/trend.html
@@ -131,6 +131,6 @@
     <script src="public/js/statsActorDirector.js"></script>
     <script src="public/js/trend_script.js"></script>
     <script src="public/js/correlationMatrix.js"></script>
-    <script src="public/js/scatterPlot.js"></script>
+    <script src="public/js/plottingScatter.js"></script>
 </body>
 </html>
