--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- Internal JS scripts  -->
     <script type="application/javascript" src="public/js/tableFilms.js"></script>
     <script type="application/javascript" src="public/js/filters.js"></script>
-    <script type="application/javascript" src="public/js/nodelinkFD.js"></script>
+    <script type="application/javascript" src="public/js/linkNodeDiagram.js"></script>
     <script type="application/javascript" src="public/js/explore_script.js"></script>
 
 </body>
