--- a/trend.html
+++ b/trend.html
@@ -122,7 +122,7 @@
         <div class= "col-sm-1"></div>    <!-- Left Side Margin -->
         <div class="col-sm-4" id="correlationMatrix">
         </div>
-        <div class="col-sm-5" id="scatterPlot">
+        <div class="col-sm-5" id="plottingScatter">
         </div>
         <div class="col-sm-1"></div>    <!-- Right Side Margin -->
     </div>
