--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </br></br></br></br></br>
 
     <!-- Creating filter sliders for selected years and selected ratings of films-->
-    <div class="row" id="searchFilters">
+    <div class="row" id="filters">
 
         <div class="col-sm-6 pl-sm-5">
             <div class="h-50" id="sliderRating">
