matrix correlation and explorescript

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <script type="application/javascript" src="public/js/tableFilms.js"></script>
     <script type="application/javascript" src="public/js/searchFilters.js"></script>
     <script type="application/javascript" src="public/js/linkNodeDiagram.js"></script>
-    <script type="application/javascript" src="public/js/explore_script.js"></script>
+    <script type="application/javascript" src="public/js/scriptExplore.js"></script>
 
 </body>
 </html>
