--- a/trend.html
+++ b/trend.html
@@ -120,7 +120,7 @@
 
     <div class="row">
         <div class= "col-sm-1"></div>    <!-- Left Side Margin -->
-        <div class="col-sm-4" id="correlationMatrix">
+        <div class="col-sm-4" id="matrixCorrelation">
         </div>
         <div class="col-sm-5" id="scatterPlot">
         </div>
@@ -130,7 +130,7 @@
     <!-- JS Internal Scripts -->
     <script src="public/js/statsActorDirector.js"></script>
     <script src="public/js/trend_script.js"></script>
-    <script src="public/js/correlationMatrix.js"></script>
+    <script src="public/js/matrixCorrelation.js"></script>
     <script src="public/js/plottingScatter.js"></script>
 </body>
 </html>
