all js files updated

--- a/trend.html
+++ b/trend.html
@@ -129,7 +129,7 @@
 
     <!-- JS Internal Scripts -->
     <script src="public/js/statsActorDirector.js"></script>
-    <script src="public/js/trend_script.js"></script>
+    <script src="public/js/scriptTrend.js"></script>
     <script src="public/js/matrixCorrelation.js"></script>
     <script src="public/js/plottingScatter.js"></script>
 </body>
