--- a/graphTrend.html
+++ b/graphTrend.html
@@ -13,7 +13,7 @@
     <script src="bower_components/jquery-3.2.1.min.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
-    <script src="bower_components/d3-tip/filmExplorer.js"></script>
+    <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/popper.js"></script>
     <script src="bower_components/d3v3.js"></script>
 </head>
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" style="font-size: 30px" href="filmExplorer.html">Film Explorer</a>
+                <a class="nav-link" style="font-size: 30px" href="index.html">Film Explorer</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link font" style="font-size: 30px" href="graphTrend.html">Film Trend</a>
