--- a/explorer.html
+++ b/explorer.html
@@ -13,7 +13,7 @@
     <!-- JS exeternal scripts -->
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/popper.js"></script>
-    <script src="bower_components/d3-tip/index.js"></script>
+    <script src="bower_components/d3-tip/explorer.js"></script>
     <script src="bower_components/jquery-3.2.1.min.js"></script>
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
 </head>
@@ -23,10 +23,10 @@
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" style="font-size: 30px" href="index.html">Film Explorer</a>
+                <a class="nav-link" style="font-size: 30px" href="explorer.html">Film Explorer</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="font-size: 30px" href="graphTrend.html">Film Trend</a>
+                <a class="nav-link" style="font-size: 30px" href="graph.html">Film Trend</a>
             </li>
         </ul>
     </nav>
